<message about commit>

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 <body>
     <!-- Visible HTML elements GO HERE  -->
     <div>
-        <div id="all contents" </div>
+        <div id="all contents" 
 </body>
 
 <body>
@@ -94,7 +94,7 @@
             <h1>Sarah's website</h1>
         </nav>
         <ul>
-            <id "nav-ul"></id>
+            <id= "nav-ul"></id>
             <li>
                 <class="nav-li">
                     </class>
