add index.html file

--- a/index.html
+++ b/index.html
@@ -81,52 +81,44 @@
 
 <body>
     <!-- Visible HTML elements GO HERE  -->
-    <div>
-        <div id="all contents" 
-</body>
-
-<body>
-    <!-- All content goes here -->
-    <div id="all contents">
-    </div>
-    <div>
-        <nav>
-            <h1>Sarah's website</h1>
-        </nav>
-        <ul>
-            <id= "nav-ul"></id>
-            <li>
-                <class="nav-li">
-                    </class>
-                    <a href="index.html"> home </a>
-            </li>
-            <li>
-                <a href="portfolio.html"> portfolio </a>
-            </li>
-
-        </ul>
-        </nav>
-
-        <main>
-            <!-- sidebar section -->
-            <div>
-                <img class="sidebar.img">
-            </div>
-            <!-- Content Section -->
-            <div>
-                <img
-                    src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT9h905PRdiLYokdgJdGUfWQ--W882r0DbX8i6NNOJliiEzbeg8vBRGcClG6e2bbSN4uXM:https://pbs.twimg.com/profile_images/920739248520810498/-Ue8lbVn_400x400.jpg&usqp=CAU">
-                <h2> Sarah </h2>
-                <p> Student at Hahnville Highschool </p>
-                <!-- Intrests slection -->
-                <div id="interests" <h3> Intrests </h3>
-                    <ul>
-                        <li>Dance</li>
-                        <li>Sushi</li>
-                        <li>Sleep</li>
-                    </ul>
+        <div id="all contents">
+                <!-- All content goes here -->
+                    <nav>
+                        <h1>Sarah's website</h1>
+                        <ul>
+                            <id= "nav-ul">
+                                </id>
+                                <li>
+                                    <class="nav-li">
+                                        </class>
+                                        <a href="index.html"> Home </a>
+                                </li>
+                                <li>
+                                    <a href="portfolio.html"> Portfolio </a>
+                                </li>
+                        </ul>
+                    </nav>
+                    <main>
+                        <!-- sidebar section -->
+                        <div>
+                            <img class="sidebar.img">
+                        </div>
+                        <!-- Content Section -->
+                        <div>
+                            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT9h905PRdiLYokdgJdGUfWQ--W882r0DbX8i6NNOJliiEzbeg8vBRGcClG6e2bbSN4uXM:https://pbs.twimg.com/profile_images/920739248520810498/-Ue8lbVn_400x400.jpg&usqp=CAU">
+                            <h2> Sarah </h2>
+                            <p> Student at Hahnville Highschool </p>
+                            <!-- Intrests section -->
+                            <div id="interests"> <h3> Intrests </h3>
+                                <ul>
+                                    <li>Dance</li>
+                                    <li>Sushi</li>
+                                    <li>Sleep</li>
+                                </ul>
+                            </div>
+                        </div>
+                    </main>
                 </div>
-                <div>
-        </main>
+            </body>
 
 </html>
