add index.html file

--- a/index.html
+++ b/index.html
@@ -85,8 +85,7 @@
                 <!-- All content goes here -->
                     <nav>
                         <h1>Sarah's website</h1>
-                        <ul>
-                            <id= "nav-ul">
+                        <ul id= "nav-ul">
                                 </id>
                                 <li>
                                     <class="nav-li">
@@ -110,10 +109,9 @@
                             <p> Student at Hahnville Highschool </p>
                             <!-- Intrests section -->
                             <div id="interests"> <h3> Intrests </h3>
-                                <ul>
-                                    <li>Dance</li>
-                                    <li>Sushi</li>
-                                    <li>Sleep</li>
+                                </ul><li> Dance</li>
+                                <li> Sushi</li>
+                                <li> Sleep</li>
                                 </ul>
                             </div>
                         </div>
