--- a/projects/bouncing-box/index.html
+++ b/projects/bouncing-box/index.html
@@ -14,7 +14,7 @@
 			display: block;
 			position: absolute;
 			top: 100px;
-			left: 0px;  /* <--- Change me! */
+			left: 1px;  /* <--- Change me! */
 		}
 		.board{
 			height: 100vh;
@@ -61,8 +61,9 @@
 			//////////////////////////////////////////////////////////////////
 			
 			// TODO 2 - Variable declarations 
-			
-
+			var positionX = 0;
+			var points = 0;
+			var speed = 10;
 			
 			/* 
 			This Function will be called 20 times/second. Each time it is called,
@@ -70,8 +71,11 @@
 			turn it around! 
 			*/
 			function update() {
-				
-
+				// Your Code to Increase positionX by 10 here//
+				positionX = positionX + speed;
+				moveBoxTo(positionX);
+				if (positionX > boardWidth);
+					console.log ();
 			};
 
 			/* 
@@ -80,7 +84,11 @@
 			the left side of the screen.
 			*/
 			function handleBoxClick() {
-				
+				positionX = 0;
+				changeBoxText(points);
+				points = points + 1;
+				speed = speed + 3
+			
 
 
 			};
