--- a/datDog/index.html
+++ b/datDog/index.html
@@ -9,7 +9,8 @@
         <a href="Menu"> </a>
         <a href="Website"> </a>
         <main>
-            <img src="image" alt="Dat Dog logo" <hr>
+            <img src="image" alt="Dat Dog logo"></img>
+            <hr> </hr>
             <p>
                 Does the idea of a hot dog put a smile on your face? Does it remind you of happy times at a picnic, a
                 ballpark, or on vacation? could an Irish Guinness sausage with andouille sauce, onions, shredded cheddar
@@ -19,7 +20,7 @@
             <p>
                 Dat Dog is a place where amazing and affordable food, fun-loving staff, and bright colors provide you
                 with a sanctuary of joy from the moment you cross its threshold. Combining the soul of Louisiana with
-                the sophistication of Europe, Dat Dog’s artfully crafted cuisine of Hot Dogs, sausages (including
+                the sophistication of Europe, Dat Dogs artfully crafted cuisine of Hot Dogs, sausages (including
                 vegetarian, vegan and fish), burgers and chicken (fried, grilled or tossed in buffalo sauce) are a thing
                 of beauty. The over 30 toppings available at no extra charge allow you to create your very own “jazz
                 improvisation in a bun”.
