add index.html file

--- a/datDog/index.html
+++ b/datDog/index.html
@@ -6,10 +6,10 @@
 </head>
 <body>
     <nav>
-        <a href="Menu"> </a>
-        <a href="Website"> </a>
+        <a href = "https://www.datdog.com/menu/"> </a>
+        <a href = "https://www.datdog.com/"> </a>
         <main>
-            <img src="image" alt="Dat Dog logo"></img>
+            <img src="image" alt= "Dat Dog logo"></img>
             <hr> </hr>
             <p>
                 Does the idea of a hot dog put a smile on your face? Does it remind you of happy times at a picnic, a
