add index.html file

--- a/datDog/index.html
+++ b/datDog/index.html
@@ -6,8 +6,8 @@
 </head>
 <body>
     <nav>
-        <a href = "https://www.datdog.com/menu/"> </a>
-        <a href = "https://www.datdog.com/"> </a>
+        <a href = "https://www.datdog.com/menu/"> Menu </a>
+        <a href = "https://www.datdog.com/"> Website </a>
         <main>
             <img src="image" alt= "Dat Dog logo"></img>
             <hr> </hr>
