add index.html file

--- a/datDog/index.html
+++ b/datDog/index.html
@@ -1,16 +1,21 @@
 <!DOCTYPE HTML>
 <html>
 <style>
-h1 {text-align: center;}
-table, th, td{
-    border: 1px solid black
-}
+    h1 {
+        text-align: center;
+    }
+
+    table,
+    th,
+    td {
+        border: 1px solid black
+    }
 </style>
+
 <head>
     <title>Dat Dog New Orleans</title>
     <h1> Dat Dog New Orleans</h1>
-    <link href = "datDog.css">
-</head>
+    <link rel="stylesheet" href="datDog.css" </head>
 
 <body>
     <nav>
