--- a/datDog/index.html
+++ b/datDog/index.html
@@ -10,14 +10,21 @@
     td {
         border: 1px solid black
     }
+
+    body {
+        background-color: rgb(213, 241, 249);
+    }
+
+    div {
+        background-color: rgb(157, 232, 255);
+    }
 </style>
 
 <head>
     <title>Dat Dog New Orleans</title>
     <h1> Dat Dog New Orleans</h1>
-    <link rel="stylesheet" href="datDog.css" </head>
-
-<body>
+    <link rel="stylesheet" href="datDog.css" 
+</head>
     <nav>
         <a href="https://www.datdog.com/menu/"> Menu </a>
         <a href="https://www.datdog.com/"> Website </a>
@@ -25,41 +32,55 @@
             <img src="image" alt="Dat Dog logo"></img>
             <hr>
             </hr>
-            <p>
-                Does the idea of a hot dog put a smile on your face? Does it remind you of happy times at a picnic, a
-                ballpark, or on vacation? could an Irish Guinness sausage with andouille sauce, onions, shredded cheddar
-                cheese, bacon and yellow mustard resurrect those positive vibes? Then you understand the reason Dat Dog
-                was opened in a 475 sq. ft. shack in a post Katrina New Orleans neighborhood on February 14, 2011.
-            </p>
-            <p>
-                Dat Dog is a place where amazing and affordable food, fun-loving staff, and bright colors provide you
-                with a sanctuary of joy from the moment you cross its threshold. Combining the soul of Louisiana with
-                the sophistication of Europe, Dat Dogs artfully crafted cuisine of Hot Dogs, sausages (including
-                vegetarian, vegan and fish), burgers and chicken (fried, grilled or tossed in buffalo sauce) are a thing
-                of beauty. The over 30 toppings available at no extra charge allow you to create your very own “jazz
-                improvisation in a bun”.
-            </p>
+            <div>
+                <h2> The Dat Dog Story</h2>
+                <p id="main content">
+                    Does the idea of a hot dog put a smile on your face? Does it remind you of happy times at a picnic,
+                    a
+                    ballpark, or on vacation? could an Irish Guinness sausage with andouille sauce, onions, shredded
+                    cheddar
+                    cheese, bacon and yellow mustard resurrect those positive vibes? Then you understand the reason Dat
+                    Dog
+                    was opened in a 475 sq. ft. shack in a post Katrina New Orleans neighborhood on February 14, 2011.
+                </p>
+                <p id="main content">
+                    Dat Dog is a place where amazing and affordable food, fun-loving staff, and bright colors provide
+                    you
+                    with a sanctuary of joy from the moment you cross its threshold. Combining the soul of Louisiana
+                    with
+                    the sophistication of Europe, Dat Dogs artfully crafted cuisine of Hot Dogs, sausages (including
+                    vegetarian, vegan and fish), burgers and chicken (fried, grilled or tossed in buffalo sauce) are a
+                    thing
+                    of beauty. The over 30 toppings available at no extra charge allow you to create your very own “jazz
+                    improvisation in a bun”.
+                </p>
+            </div>
+            <h1> Come see us a DatDog.com </h1>
             <table>
                 <tr>
                     <th>Our happiness has spread to several more locations in New Orleans and elsewhere with beautiful
                         balconies and sun-splashed gardens. So come, shill out and embrace your bliss!</th>
                 </tr>
                 <tr>
-                    <td><img
-                            src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR-k0PeM8QhDo9LNll7gAAbSviiLqu89f4G6w:https://10619-2.s.cdn12.com/maps/dat-dog-new-orleans-3-map.jpg&usqp=CAU">
+                    <td> <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR-k0PeM8QhDo9LNll7gAAbSviiLqu89f4G6w:https://10619-2.s.cdn12.com/maps/dat-dog-new-orleans-3-map.jpg&usqp=CAU">
                     </td>
                     </td>
                     <td>601 Frenchmen St</td>
                 </tr>
                 <tr>
-                    <td><img
-                            src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQds4X6g0JTdlhIhFtgpMw0S1fIj6nSiYKLKg:https://www.happycow.net/staticmap%3Fzoom%3D16%26lat%3D29.935111%26lng%3D-90.108866%26type%3D3%26width%3D600%26height%3D360%26t%3D10&usqp=CAU">
+                    <td> <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQds4X6g0JTdlhIhFtgpMw0S1fIj6nSiYKLKg:https://www.happycow.net/staticmap%3Fzoom%3D16%26lat%3D29.935111%26lng%3D-90.108866%26type%3D3%26width%3D600%26height%3D360%26t%3D10&usqp=CAU">
                     </td>
                     <td>5030 Freret St</td>
                 </tr>
             </table>
         </main>
     </nav>
-</body>
+    </body>
 
 </html>
+<!--body {
+    background-color: rgb(213, 241, 249);
+}
+div {
+    background-color: rgb(157, 232, 255);
+}-->
