--- a/datDog/index.html
+++ b/datDog/index.html
@@ -8,33 +8,65 @@
     table,
     th,
     td {
-        border: 1px solid black
+        width: 1490px;
+        border: 1px solid rgb(0, 0, 0)
     }
 
     body {
-        background-color: rgb(213, 241, 249);
+        background-color: rgb(123, 226, 255);
     }
 
     div {
-        background-color: rgb(157, 232, 255);
+        background-color: rgb(253, 253, 253);
+        width: 1490px;
+        padding:1px;
+        border: 1px solid rgb(0, 0, 0);
+        margin: 0;
+
+    a:link {
+        color: green;
+        text-decoration: none;
+    }
+
+    a:hover {
+        color: darksalmon;
+        text-decoration: none;
+    }
+
+    a:active {
+        color: rgb(252, 223, 0);
+        text-decoration: none;
+    }
+
+    a:visited {
+        color: rgb(79, 41, 249);
+        text-decoration: none;
+    }
+    .information {
+        font-family: cursive;
+        color: rgb(79, 41, 249);
+    }
+
+    #datTitle {
+        font-family: 'Segoe UI';
+        color: rgb(79, 41, 249)
     }
 </style>
 
 <head>
     <title>Dat Dog New Orleans</title>
-    <h1> Dat Dog New Orleans</h1>
-    <link rel="stylesheet" href="datDog.css" 
-</head>
+    <h1 id="datTitle"> Dat Dog New Orleans</h1>
+    <link rel="stylesheet" href="datDog.css" </head>
     <nav>
-        <a href="https://www.datdog.com/menu/"> Menu </a>
-        <a href="https://www.datdog.com/"> Website </a>
+        <p><a href="https://www.datdog.com/menu/"> Menu </a></p>
+        <p><a href="https://www.datdog.com/"> Website </a></p>
         <main>
             <img src="image" alt="Dat Dog logo"></img>
             <hr>
             </hr>
-            <div>
+            <div class="information">
                 <h2> The Dat Dog Story</h2>
-                <p id="main content">
+                <p id="main content" >
                     Does the idea of a hot dog put a smile on your face? Does it remind you of happy times at a picnic,
                     a
                     ballpark, or on vacation? could an Irish Guinness sausage with andouille sauce, onions, shredded
@@ -55,20 +87,22 @@
                     improvisation in a bun”.
                 </p>
             </div>
-            <h1> Come see us a DatDog.com </h1>
+            <h1 class="information"> Come see us a DatDog.com </h1>
             <table>
                 <tr>
                     <th>Our happiness has spread to several more locations in New Orleans and elsewhere with beautiful
                         balconies and sun-splashed gardens. So come, shill out and embrace your bliss!</th>
                 </tr>
                 <tr>
-                    <td> <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR-k0PeM8QhDo9LNll7gAAbSviiLqu89f4G6w:https://10619-2.s.cdn12.com/maps/dat-dog-new-orleans-3-map.jpg&usqp=CAU">
+                    <td> <img
+                            src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR-k0PeM8QhDo9LNll7gAAbSviiLqu89f4G6w:https://10619-2.s.cdn12.com/maps/dat-dog-new-orleans-3-map.jpg&usqp=CAU">
                     </td>
                     </td>
                     <td>601 Frenchmen St</td>
                 </tr>
                 <tr>
-                    <td> <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQds4X6g0JTdlhIhFtgpMw0S1fIj6nSiYKLKg:https://www.happycow.net/staticmap%3Fzoom%3D16%26lat%3D29.935111%26lng%3D-90.108866%26type%3D3%26width%3D600%26height%3D360%26t%3D10&usqp=CAU">
+                    <td> <img
+                            src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQds4X6g0JTdlhIhFtgpMw0S1fIj6nSiYKLKg:https://www.happycow.net/staticmap%3Fzoom%3D16%26lat%3D29.935111%26lng%3D-90.108866%26type%3D3%26width%3D600%26height%3D360%26t%3D10&usqp=CAU">
                     </td>
                     <td>5030 Freret St</td>
                 </tr>
@@ -78,9 +112,19 @@
     </body>
 
 </html>
-<!--body {
-    background-color: rgb(213, 241, 249);
-}
-div {
-    background-color: rgb(157, 232, 255);
-}-->
+
+<!-- a:link {
+        text-decoration: none;
+    }
+
+    a:visited {
+        text-decoration: none;
+    }
+
+    a:hover {
+        text-decoration: none;
+    }
+
+    a:active {
+        text-decoration: none;
+    } -->
