--- a/datDog/index.html
+++ b/datDog/index.html
@@ -1,62 +1,10 @@
 <!DOCTYPE HTML>
 <html>
-<style>
-    h1 {
-        text-align: center;
-    }
-
-    table,
-    th,
-    td {
-        width: 1490px;
-        border: 1px solid rgb(0, 0, 0)
-    }
-
-    body {
-        background-color: rgb(123, 226, 255);
-    }
-
-    div {
-        background-color: rgb(253, 253, 253);
-        width: 1490px;
-        padding:1px;
-        border: 1px solid rgb(0, 0, 0);
-        margin: 0;
-
-    a:link {
-        color: green;
-        text-decoration: none;
-    }
-
-    a:hover {
-        color: darksalmon;
-        text-decoration: none;
-    }
-
-    a:active {
-        color: rgb(252, 223, 0);
-        text-decoration: none;
-    }
-
-    a:visited {
-        color: rgb(79, 41, 249);
-        text-decoration: none;
-    }
-    .information {
-        font-family: cursive;
-        color: rgb(79, 41, 249);
-    }
-
-    #datTitle {
-        font-family: 'Segoe UI';
-        color: rgb(79, 41, 249)
-    }
-</style>
-
 <head>
     <title>Dat Dog New Orleans</title>
-    <h1 id="datTitle"> Dat Dog New Orleans</h1>
-    <link rel="stylesheet" href="datDog.css" </head>
+    <h1 id="datTitle">Dat Dog New Orleans</h1>
+    <link rel="stylesheet" href="datDog.css" 
+</head>
     <nav>
         <p><a href="https://www.datdog.com/menu/"> Menu </a></p>
         <p><a href="https://www.datdog.com/"> Website </a></p>
@@ -87,7 +35,7 @@
                     improvisation in a bun”.
                 </p>
             </div>
-            <h1 class="information"> Come see us a DatDog.com </h1>
+            <h1 class="information">Come see us a DatDog.com</h1>
             <table>
                 <tr>
                     <th>Our happiness has spread to several more locations in New Orleans and elsewhere with beautiful
@@ -112,19 +60,3 @@
     </body>
 
 </html>
-
-<!-- a:link {
-        text-decoration: none;
-    }
-
-    a:visited {
-        text-decoration: none;
-    }
-
-    a:hover {
-        text-decoration: none;
-    }
-
-    a:active {
-        text-decoration: none;
-    } -->
