--- a/datDog/index.html
+++ b/datDog/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE HTML>
 <html>
+
 <head>
     <title>Dat Dog New Orleans</title>
     <h1 id="datTitle">Dat Dog New Orleans</h1>
-    <link rel="stylesheet" href="datDog.css" 
-</head>
+    <link rel="stylesheet" href="datDog.css" </head>
     <nav>
         <p><a href="https://www.datdog.com/menu/"> Menu </a></p>
         <p><a href="https://www.datdog.com/"> Website </a></p>
@@ -14,7 +14,7 @@
             </hr>
             <div class="information">
                 <h2> The Dat Dog Story</h2>
-                <p id="main content" >
+                <p id="main content">
                     Does the idea of a hot dog put a smile on your face? Does it remind you of happy times at a picnic,
                     a
                     ballpark, or on vacation? could an Irish Guinness sausage with andouille sauce, onions, shredded
