--- a/datDog/index.html
+++ b/datDog/index.html
@@ -42,12 +42,14 @@
                         balconies and sun-splashed gardens. So come, shill out and embrace your bliss!</th>
                 </tr>
                 <tr>
-                    <td> <img
-                            src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR-k0PeM8QhDo9LNll7gAAbSviiLqu89f4G6w:https://10619-2.s.cdn12.com/maps/dat-dog-new-orleans-3-map.jpg&usqp=CAU"></td><td>601 Frenchmen St</td>
+                    <td> <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR-k0PeM8QhDo9LNll7gAAbSviiLqu89f4G6w:https://10619-2.s.cdn12.com/maps/dat-dog-new-orleans-3-map.jpg&usqp=CAU">
+                    </td>
+                    <td>601 Frenchmen St</td>
                 </tr>
                 <tr>
-                    <td> <img
-                            src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQds4X6g0JTdlhIhFtgpMw0S1fIj6nSiYKLKg:https://www.happycow.net/staticmap%3Fzoom%3D16%26lat%3D29.935111%26lng%3D-90.108866%26type%3D3%26width%3D600%26height%3D360%26t%3D10&usqp=CAU"><td>5030 Freret St</td>
+                    <td> <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQds4X6g0JTdlhIhFtgpMw0S1fIj6nSiYKLKg:https://www.happycow.net/staticmap%3Fzoom%3D16%26lat%3D29.935111%26lng%3D-90.108866%26type%3D3%26width%3D600%26height%3D360%26t%3D10&usqp=CAU">
+                    </td>
+                    <td>5030 Freret St</td>
                 </tr>
             </table>
         </main>
