--- a/datDog/index.html
+++ b/datDog/index.html
@@ -3,13 +3,15 @@
 
 <head>
     <title>Dat Dog New Orleans</title>
-    <h1 id="datTitle">Dat Dog New Orleans</h1>
-    <link rel="stylesheet" href="datDog.css" </head>
+    <link rel="stylesheet" href="datDog.css">
+</head>
+<body>
     <nav>
         <p><a href="https://www.datdog.com/menu/"> Menu </a></p>
         <p><a href="https://www.datdog.com/"> Website </a></p>
         <main>
-            <img src="image" alt="Dat Dog logo"></img>
+            <img src="images" alt="Dat Dog logo" width="500" height="600"> 
+            <h1 id="datTitle">Dat Dog New Orleans</h1>
             <hr>
             </hr>
             <div class="information">
