--- a/datDog/index.html
+++ b/datDog/index.html
@@ -6,9 +6,12 @@
     <link rel="stylesheet" href="datDog.css">
 </head>
 <body>
+    <nav class="pages">
+        <div style="padding-left:16px">
+        <a href="https://www.datdog.com/menu/" target="_blank"> Menu </a>
+        <a href="https://www.datdog.com/" target="_blank"> Website </a>
+    </nav>
     <nav>
-        <p><a href="https://www.datdog.com/menu/"> Menu </a></p>
-        <p><a href="https://www.datdog.com/"> Website </a></p>
         <main>
             <img src="images" alt="Dat Dog logo" width="500" height="600"> 
             <h1 id="datTitle">Dat Dog New Orleans</h1>
@@ -16,7 +19,7 @@
             </hr>
             <div class="information">
                 <h2> The Dat Dog Story</h2>
-                <p id="main content">
+                <p id="main Content">
                     Does the idea of a hot dog put a smile on your face? Does it remind you of happy times at a picnic,
                     a
                     ballpark, or on vacation? could an Irish Guinness sausage with andouille sauce, onions, shredded
@@ -25,7 +28,7 @@
                     Dog
                     was opened in a 475 sq. ft. shack in a post Katrina New Orleans neighborhood on February 14, 2011.
                 </p>
-                <p id="main content">
+                <p id="main Content">
                     Dat Dog is a place where amazing and affordable food, fun-loving staff, and bright colors provide
                     you
                     with a sanctuary of joy from the moment you cross its threshold. Combining the soul of Louisiana
