--- a/datDog/index.html
+++ b/datDog/index.html
@@ -13,11 +13,11 @@
     </nav>
     <nav>
         <main>
-            <img src="images" alt="Dat Dog logo" width="500" height="600"> 
+            <img src="images" alt="Dat Dog logo" width="500" height="333"> 
             <h1 id="datTitle">Dat Dog New Orleans</h1>
             <hr>
             </hr>
-            <div class="information">
+            <div class="datDog">
                 <h2> The Dat Dog Story</h2>
                 <p id="main Content">
                     Does the idea of a hot dog put a smile on your face? Does it remind you of happy times at a picnic,
@@ -40,7 +40,7 @@
                     improvisation in a bun”.
                 </p>
             </div>
-            <h1 class="information">Come see us a DatDog.com</h1>
+            <h1 class="datDog">Come see us a DatDog.com</h1>
             <table>
                 <tr>
                     <th>Our happiness has spread to several more locations in New Orleans and elsewhere with beautiful
