--- a/datDog/index.html
+++ b/datDog/index.html
@@ -5,15 +5,16 @@
     <title>Dat Dog New Orleans</title>
     <link rel="stylesheet" href="datDog.css">
 </head>
+
 <body>
     <nav class="pages">
         <div style="padding-left:16px">
-        <a href="https://www.datdog.com/menu/" target="_blank"> Menu </a>
-        <a href="https://www.datdog.com/" target="_blank"> Website </a>
+            <a href="https://www.datdog.com/menu/" target="_blank"> Menu </a>
+            <a href="https://www.datdog.com/" target="_blank"> Website </a>
     </nav>
     <nav>
         <main>
-            <img src="images" alt="Dat Dog logo" width="500" height="333"> 
+            <img src="images" alt="Dat Dog logo" width="500" height="333">
             <h1 id="datTitle">Dat Dog New Orleans</h1>
             <hr>
             </hr>
@@ -47,18 +48,20 @@
                         balconies and sun-splashed gardens. So come, shill out and embrace your bliss!</th>
                 </tr>
                 <tr>
-                    <td> <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR-k0PeM8QhDo9LNll7gAAbSviiLqu89f4G6w:https://10619-2.s.cdn12.com/maps/dat-dog-new-orleans-3-map.jpg&usqp=CAU">
+                    <td> <img
+                            src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR-k0PeM8QhDo9LNll7gAAbSviiLqu89f4G6w:https://10619-2.s.cdn12.com/maps/dat-dog-new-orleans-3-map.jpg&usqp=CAU">
                     </td>
                     <td>601 Frenchmen St</td>
                 </tr>
                 <tr>
-                    <td> <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQds4X6g0JTdlhIhFtgpMw0S1fIj6nSiYKLKg:https://www.happycow.net/staticmap%3Fzoom%3D16%26lat%3D29.935111%26lng%3D-90.108866%26type%3D3%26width%3D600%26height%3D360%26t%3D10&usqp=CAU">
+                    <td> <img
+                            src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQds4X6g0JTdlhIhFtgpMw0S1fIj6nSiYKLKg:https://www.happycow.net/staticmap%3Fzoom%3D16%26lat%3D29.935111%26lng%3D-90.108866%26type%3D3%26width%3D600%26height%3D360%26t%3D10&usqp=CAU">
                     </td>
                     <td>5030 Freret St</td>
                 </tr>
             </table>
         </main>
     </nav>
-    </body>
+</body>
 
 </html>
