--- a/projects/bouncing-box/index.html
+++ b/projects/bouncing-box/index.html
@@ -76,10 +76,9 @@
 				moveBoxTo(positionX);
 				if (positionX > boardWidth){
 					console.log (speed = -speed);
-				}
-				if (positionX < 0){
-					console.log (speed = +speed);
-				}
+				}if (positionX <= 0){
+					console.log (-speed * -speed = speed);
+				};
 
 			/* 
 			This Function will be called each time the box is clicked. Each time it is called,
@@ -90,12 +89,12 @@
 				positionX = 0;
 				changeBoxText(points);
 				points = points + 1;
-				speed = speed + 3
+				speed = speed + 3;
 			
 
 
 			};
-		})();
+		};
 	</script>
 </body>
 </html>
