--- a/projects/bouncing-box/index.html
+++ b/projects/bouncing-box/index.html
@@ -75,11 +75,12 @@
 				positionX = positionX + speed;
 				moveBoxTo(positionX);
 				if (positionX > boardWidth){
-					console.log (speed = -speed);
-				}if (positionX <= 0){
-					console.log (-speed * -speed = speed);
+					speed *= -1;
+				}if (positionX < 0){
+					speed = -speed;
+				}
+				
 				};
-
 			/* 
 			This Function will be called each time the box is clicked. Each time it is called,
 			it should increase the points total, increase the speed, and move the box to
@@ -89,12 +90,21 @@
 				positionX = 0;
 				changeBoxText(points);
 				points = points + 1;
-				speed = speed + 3;
-			
+				if (speed % 2 === 0){
+					speed + 3;
+				}
+				else if (speed !== 2){
+					speed -3;
+				}
 
-
+				//IF speed is a positive number:
+    //add 3 to speed
+//ELSE IF speed is a negative number:
+    //subtract 3 from speed
 			};
-		};
+		})();
 	</script>
 </body>
 </html>
+
+<!--speed = speed + 3;-->
