--- a/projects/bouncing-box/index.html
+++ b/projects/bouncing-box/index.html
@@ -90,17 +90,13 @@
 				positionX = 0;
 				changeBoxText(points);
 				points = points + 1;
-				if (speed % 2 === 0){
-					speed + 3;
+				if (speed === speed){
+					speed = speed + 3;
 				}
-				else if (speed !== 2){
-					speed -3;
+				else if (speed === -speed){
+					speed = speed -3;
 				}
 
-				//IF speed is a positive number:
-    //add 3 to speed
-//ELSE IF speed is a negative number:
-    //subtract 3 from speed
 			};
 		})();
 	</script>
