--- a/projects/bouncing-box/index.html
+++ b/projects/bouncing-box/index.html
@@ -15,10 +15,11 @@
 			position: absolute;
 			top: 100px;
 			left: 1px;  /* <--- Change me! */
+
 		}
 		.board{
 			height: 100vh;
-			background-color: orangered;
+			background-color: orangered
 		}
 	</style>
 	<!-- 	<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script> -->
@@ -97,13 +98,11 @@
 				else if (speed === -speed){
 					speed = speed -3;
 				}
-
+				
 			};
 		})();
 	</script>
 </body>
 </html>
 
-<!--speed = speed + 3;-->
 
-<!--background-color: teal;-->
